# SemiBin

./: .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.md  CONTRIBUTING.md  COPYING.MIT  ChangeLog  README.md  flake.nix  mkdocs.yml  pyproject.toml  roadmap.md  setup.py
.github/workflows/: s3n2bin_test.yml  semibin_test.yml
SemiBin/: atomicwrite.py  chicken_caecum_model.h5  citation.py  cluster.py  dog_gut_model.h5  error.py  fasta.py  generate_coverage.py  generate_kmer.py  generate_methylation.py  getmarker.pl  gtdb.py  human_gut_model.h5  human_oral_model.h5  long_read_cluster.py  main.py  markers.py  methylation_features.py  methylation_pattern.py  mouse_gut_model.h5  naive_orffinder.py  ocean_model.h5  orffinding.py  self_supervised_model.py  semi_supervised_model.py  soil_model.h5  test_getmarker.pl  utils.py  wastewater_model.h5
SemiBin/models/: built_environment_model.pt  cat_gut_model.pt  chicken_caecum_model.pt  dog_gut_model.pt  global_model.pt  human_gut_model.pt  human_oral_model.pt  mouse_gut_model.pt  ocean_model.pt  pig_gut_model.pt  soil_model.pt  wastewater_model.pt
SemiBin/skills/semibin/: SKILL.md
SemiBin/skills/semibin/references/: developer-guide.md  subcommands.md
docs/: aemb.md  ai-integration.md  faq.md  generate.md  index.md  install.md  output.md  semi-supervised.md  semibin2.md  subcommands.md  training.md  usage.md  whatsnew.md
integration-tests/: README.md  bin_command.py  concatenate_fasta.py  easy_commands.py  easy_commands2.py  generate_cannot_links.py  generate_data_coassembly_command.py  generate_data_multi_command.py  generate_data_single_command.py  split_contigs_command.py  train_command.py
models/: dog_gut_model.h5  human_gut_model.h5  tara_model.h5
s3n2bin/: cluster.py  generate_coverage.py  generate_kmer.py  main.py  semi_supervised_model.py  utils.py
script/: cluster_cannot.py  generate_cannot_link.py  generate_split.py
semi_metabin/: generate_coverage.py  generate_kmer.py  main.py  semi_supervised_model.py
test/: test_CAT_script.py  test_args.py  test_bin.py  test_bin_command.py  test_cal_kl.py  test_cov.py  test_generate_data_coassembly.py  test_generate_data_coassembly_command.py  test_generate_data_multi.py  test_generate_data_multi_command.py  test_generate_data_single.py  test_generate_data_single_command.py  test_generate_methylation_features.py  test_generate_sequence_features.py  test_kmer.py  test_markers.py  test_naive_orffinder.py  test_train.py  test_utils.py  test_write.py
test/CAT_data/: CAT.out
test/bin_data/: embedding.npy  model.h5  model.pt
test/coassembly_sample_data/: input.fasta.bz2  sample3.txt
test/data/: bin.230.fa.hmmout  bin.96.fa.hmmout
test/methylation_data/: assembly.fasta  bin-motifs.tsv  data.csv  data_split.csv  expected_contig_methylation.tsv  geobacillus-plasmids.assembly.fasta  geobacillus-plasmids.pileup.bed.gz.tbi  motifs-scored.tsv  must_links.csv
test/methylation_data/motif-positions/: contig_10_a_motifs_positions.npz  contig_10_m_motifs_positions.npz  motif_positions_combined.npz
test/multi_samples_data/: input_multi.fasta  input_multi.fasta.bz2  input_multi.fasta.xz  input_multi_sorted1.cram  input_multi_sorted10.cram  input_multi_sorted2.cram  input_multi_sorted3.cram  input_multi_sorted4.cram  input_multi_sorted5.cram  input_multi_sorted6.cram  input_multi_sorted7.cram  input_multi_sorted8.cram  input_multi_sorted9.cram
test/single_sample_data/: input.cram  input.fasta.xz  taxonomyResult.tsv
