[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SemiBin"
dynamic = ['version']
description = "Metagenomic binning with siamese neural networks"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Shaojun Pan" },
    { name = "Luis Pedro Coelho", email = "luis@luispedro.org" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "tqdm",
    "pyyaml",
    "torch>=1.13", # torch.load() only supports the weights_only argument since 1.13
    "python-igraph",
    "pandas",
    "scikit-learn",
    "requests",
    "numexpr",
]
urls = { homepage = "https://github.com/BigDataBiology/SemiBin" }

[project.optional-dependencies]
dev = ['pytest', 'hypothesis<=6.112.1']

[project.scripts]
SemiBin = "SemiBin.main:main_no_version"
SemiBin2 = "SemiBin.main:main2"
SemiBin1 = "SemiBin.main:main1"

[tool.setuptools]
packages = ["SemiBin"]
include-package-data = true
zip-safe = false


[tool.setuptools.package-data]
SemiBin = ["*.hmm", "models/*.pt"]

[tool.setuptools.dynamic]
version = {attr = "SemiBin.semibin_version.__version__"}


[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
samtools = ">=1.21,<2"
mmseqs2 = ">=17.b804f,<18"
bedtools = ">=2.31.1,<3"
hmmer = ">=3.4,<4"
fraggenescan = ">=1.32,<2"
prodigal = ">=2.6.3,<3"

[tool.pixi.feature.test]
dependencies = { pytest = "*", hypothesis = "<=6.112.1", "uv" = "*" }

[tool.pixi.feature.py38]
dependencies = { python = "3.8.*" }

[tool.pixi.feature.py39]
dependencies = { python = "3.9.*" }

[tool.pixi.feature.py310]
dependencies = { python = "3.10.*" }

[tool.pixi.feature.py311]
dependencies = { python = "3.11.*" }

[tool.pixi.feature.py312]
dependencies = { python = "3.12.*" }

[tool.pixi.environments]
test-py38 = ["py38", "test"]
test-py39 = ["py39", "test"]
test-py310 = ["py310", "test"]
test-py311 = ["py311", "test"]
test-py312 = ["py312", "test"]

